# Deep-Learning-for-Human-Activity-Recognition

./: .gitignore  Dockerfile  Dockerfile_gpu  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  generate_features_of_hapt.py  pyproject.toml  run_cnn.py  run_deep_conv_lstm.py  run_generate_features.py  run_lgbm.py  run_mlp.py  run_sdae.py
configs/: default.json  selected_feature.pickle
logs/: logger_lgbm.py
models/: all_features_lgbm.py  cnn.py  deep_conv_lstm.py  ecdf_lgbm.py  lgbm.py  lstm.py  mlp.py  my_lgbm.py  sdae.py
models/tunings/: lgbm_optuna_stepwise.py  lgbm_tuning.py
notebooks/: basic_data_analysis.ipynb  create_features.ipynb  create_raw_data_for_dl.ipynb  data_visualization.ipynb  generate_ecdf_features.ipynb  plot_raw_data.ipynb  shap_lgbm.ipynb
scripts/: generate_ecdf_features.py  generate_features_of_hapt.py  obtain_features.py
src/: create_features.py  ecdf.py  keras_callback.py  obtain_features.py  preprocessing.py  utils.py
src/data_prep/: create_features.py  load.py  preprocess_raw_data.py  preprocessing.py
