[tool.poetry]
name = "deep-learning-for-human-activity-recognition"
version = "0.1.0"
description = ""
authors = ["takumiw"]

[tool.poetry.dependencies]
python = "3.6.9"
tensorflow = "1.12.0"
tensorflow-gpu = "1.12.0"
scipy = "^1.4.1"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
scikit-learn = "^0.22.2"
graphviz = "^0.13.2"
pydotplus = "^2.0.2"
jupyter = "^1.0.0"
optuna = "^1.3.0"
lightgbm = "^2.3.1"
catboost = "^0.22"
xgboost = "^1.0.2"
statsmodels = "^0.11.1"
tqdm = "^4.45.0"
shap = "^0.35.0"
jupyter-contrib-nbextensions = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
