[tool.poetry]
name = "deep-learning-for-human-activity-recognition"
version = "0.1.0"
description = ""
authors = ["takumiw"]

[tool.poetry.dependencies]
python = "3.6.9"
tensorflow = "1.12.0"
tensorflow-gpu = "1.12.0"
numpy = "^1.18.4"
scipy = "^1.4.1"
pandas = "^1.0.4"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
scikit-learn = "^0.23.1"
graphviz = "^0.14"
pydotplus = "^2.0.2"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
statsmodels = "^0.11.1"
tqdm = "^4.46.0"
shap = "^0.35.0"
lightgbm = "^2.3.1"
catboost = "^0.23.2"
xgboost = "^1.1.0"
flake8 = "^3.8.2"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
