[tool.poetry]
name = "deep-learning-for-human-activity-recognition"
version = "0.1.0"
description = "Python implementation for Deep Learning for Human Activity Recognition (HAR)"
repository = "https://github.com/takumiw/Deep-Learning-for-Human-Activity-Recognition"
readme = "README.md"
authors = ["takumiw"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow-gpu = "2.3"
pandas = "^1.1.2"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
scikit-learn = "^0.23.2"
tqdm = "^4.49.0"
shap = "^0.36.0"
lightgbm = "^3.0.0"
statsmodels = "^0.12.0"
pydotplus = "^2.0.2"
graphviz = "^0.14.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^20.8b1"
mypy = "^0.782"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
